  Documentation migrated from markdown to asciidoc
  EntityTestUnit refactored, demo domain unit tests fixed
  TextUtil.getDelimitedString() minor bug fixed
  EntityTestUnit.getRandomValue() now truncates LocalDateTime and LocalTime to seconds, to prevent comparison errors when the underlying database system truncates on insert
  Some 3d party dependencies upgraded to latest version
  Plugin modules renamed to reflect package names (as is with java11 version)
  Slf4J dependency changed from 'implementation' to 'api'
  Property.isDecimal() added
  Property.BIG_DECIMAL_ROUNDING_MODE configuration value added
  BigDecimal support added using Types.DECIMAL
  DoubleField renamed to the more appropriate DecimalField
  BigDecimal support continued (as in, things I missed)
  BigDecimal support added to javafx module
  SerializationWhitelist moved to common.remote module
  EntityJSONParser now handles BigDecimal values
  Entities.getKeys() parameter now List<Entity>, iteration no longer stream based
  H2Database, handle null database name for in-memory databases
  AbstractEntityConnectionProvider.setDomainClassName() and setClientId() null parameter handling improved with better error messages
  EntityEditPanel.selectInputField() no longer displays selection list if only one input field is available
  EntityApplicationPanel no longer uses getApplicationIdentifier() when saving the default username to user preferences (key could be too long)
  PreferencesUtil.setDefaultUsername() and getDefaultUsername() removed
  EntityTestUnit, special equals handling for BigDecimal property values, plus some minor refactoring and javadoc improvements
  Entities.getValues() and getDistinctValues() now return List instead of Collection
  h2database module removed from a few testRuntimeOnly configurations where it was unnecessary
  Static import added for Collections.singletonList(), Collections.emptyList() and Arrays.asList()